Date       Version  Comment
---------------------------------------------------------------------------
?/1  2004  1.1.1    Now compiles even if libintl.h is missing

20/9 2003  1.1.0    DOS FAT16 boot record added
                    NT FAT32 boot record added

23/2 2003  1.0.2    Documentation update, man-page added

9/8 2002   1.0.1    Fixed problem compiling sv_SE.po with newer versions of
                    msgfmt

4/8 2002   1.0      First public release. Documentation updated with
                    SourceForge addresses for web and email contact.

30/7 2002  0.9      First stable release