@@ -22,8 +22,8 @@ int entire_fat_32_nt_br_matches(FILE *fp)
 
 int write_fat_32_nt_br(FILE *fp, int bKeepLabel)
 {
+   #include "label_11_char.h"
    #include "br_fat32nt_0x0.h"
-   #include "br_fat32nt_0x47.h"
    #include "br_fat32nt_0x52.h"
    #include "br_fat32nt_0x3f0.h"
    #include "br_fat32nt_0x1800.h"
@@ -42,7 +42,8 @@ int write_fat_32_nt_br(FILE *fp, int bKeepLabel)
       return
 	 ( write_data(fp, 0x0, br_fat32nt_0x0, sizeof(br_fat32nt_0x0)) &&
 	   /* BIOS Parameter Block should not be overwritten */
-	   write_data(fp, 0x47, br_fat32nt_0x47, sizeof(br_fat32nt_0x47)) &&
+	   write_data(fp, 0x47, label_11_char, sizeof(label_11_char)) &&
+	   write_data(fp, 0x52, br_fat32nt_0x52, sizeof(br_fat32nt_0x52)) &&
    /* Cluster information is not overwritten, however, it would bo OK
       to write 0xff 0xff 0xff 0xff 0xff 0xff 0xff 0xff here. */
 	   write_data(fp, 0x3f0, br_fat32nt_0x3f0, sizeof(br_fat32nt_0x3f0)) &&
